# lightspeed

./: .gitignore  Cargo.toml  README.md  ddr_example.json
docs/: arch.md  tdr.md  version_2.md
src/: main.rs
src/models/: ddr_req.rs  entity.rs  mod.rs
src/project_generators/: file_generator.rs  mod.rs  rust.rs
src/templates/: mod.rs  postgres.rs  rust.rs
src/templates/docker/: docker_compose.rs
src/templates/postgres/: crud_query_templates.rs  database_template.rs  mod.rs  table_templates.rs
src/templates/rust/: axum_routes_template.rs  axum_routes_templates.rs  controller_templates.rs  error_templates.rs  import_templates.rs  mod.rs  mod_template.rs  model_template.rs  model_templates.rs  project_config_templates.rs  service_templates.rs  source_templates.rs
src/utils/: mod.rs  naming_convention.rs
static_templates/rust/microservice/: Cargo.toml
static_templates/rust/microservice/src/: error.rs  lib.rs  log_request.rs  main.rs
static_templates/rust/microservice/src/controllers/: mod.rs  system_controller.rs
static_templates/rust/microservice/src/http/: mod.rs
static_templates/rust/microservice/src/models/: config.rs  mod.rs
static_templates/rust/microservice/src/utils/: mod.rs  sqlx_utils.rs
