[package]
name = "lightspeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.75"
sqlx = {version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono", "uuid" ] }
chrono ={version = "0.4.31", features = ["serde"]}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
httpc-test = "0.1.6"
axum = {version = "0.6.20", features = ["macros"]}
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde_with = "3.3.0"
tracing = "0.1.37"
futures = "0.3.28"
csv = "1.3.0"
utoipa = {version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
openssl = { version = "0.10.57", features = ["vendored"] }
env_logger = "0.10.1"
rdkafka = "0.36.0"
strum = {version =  "0.25.0", features =  ["derive"]}
strum_macros = { version = "0.25.3", features = [] }
clap = "4.4.11"

[dev-dependencies]
serde_json = "1.0.82"
tower = "0.4.13"

